--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,29 @@
 cmake_minimum_required(VERSION 3.10)
 project(box2d LANGUAGES CXX)
-
-# Set C++ standard and options
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Set static runtime
+# Static runtime
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Release>:Release>")
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Distribution>:Distribution>")
 
 # Output directories
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/${PROJECT_NAME}")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/${PROJECT_NAME}")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/${PROJECT_NAME}")
 
+
 # Files
 file(GLOB_RECURSE SOURCE_FILES 
     "src/*.cpp" 
     "src/*.h" 
     "include/*.h"
+    "../../glm/glm/*.hpp"
+    "../../glm/glm/*.inl"
+    "../../glm/glm/glx/*.hpp"
+    "../../glm/glm/glx/*.inl"
 )
 
 # Define the target
@@ -28,26 +33,18 @@ add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
 target_include_directories(${PROJECT_NAME} PRIVATE
     "include"
     "src"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../glm/glm"
+    "../../glm/glm"
 )
 
 # Configuration-specific settings
-if(WIN32)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE
-        _CRT_SECURE_NO_WARNINGS
-    )
-
-    target_compile_options(${PROJECT_NAME} PRIVATE
-        $<$<CONFIG:Debug>:/MTd>
-        $<$<CONFIG:Release>:/MT>
-        $<$<CONFIG:Distribution>:/MT>
-    )
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_options(box2d PRIVATE $<$<CONFIG:Debug>:/MTd>)
 endif()
 
-if(UNIX)
-    target_compile_options(${PROJECT_NAME} PRIVATE
-        $<$<CONFIG:Debug>:-O0>
-        $<$<CONFIG:Release>:-O3>
-        $<$<CONFIG:Distribution>:-O3>
-    )
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    target_compile_options(box2d PRIVATE $<$<CONFIG:Release>:/MT>)
+endif()
+
+if(CMAKE_BUILD_TYPE STREQUAL "Distribution")
+    target_compile_options(box2d PRIVATE $<$<CONFIG:Distribution>:/MT>)
 endif()
